# feast_rest_registry

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/feast_rest_registry/: feastregistry_restserver.py  interface.py  server.py
