[build-system]
requires = ["setuptools>=61.0", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmic_database"
version = "1.2.1"
authors = [
  { name="Ross Donnachie", email="code@radonn.co.za" },
]
description = "A RESTful server of the FEAST SQL registry."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
feast_rest_registry = "feast_rest_registry:server.cli_start_server"
